# python-api-vercel

./: README.md  main.py  pyproject.toml
server/: api.py  model.py  routes.py
